--- a/4-advanced-css/zadatak_03/index.html
+++ b/4-advanced-css/zadatak_03/index.html
@@ -9,55 +9,56 @@
 </head>
 
 <body>
-
+    <h1>Gallery Heading</h1>
     <div class="gallery">
         <div class="gallery-item">
-            <img src="images/pexels-bearmax-3960036_800x600.jpg" alt="Slika 1">
-            <h3>Natpis 1</h3>
-            <p>Opis slike 1</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-fox-1265622_800x600.jpg" alt="Slika 2">
-            <h3>Natpis 2</h3>
-            <p>Opis slike 2</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-fox-709481_800x600.jpg" alt="Slika 3">
-            <h3>Natpis 3</h3>
-            <p>Opis slike 3</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-ihsan-adityawarman-1056251_800x600.jpg" alt="Slika 4">
-            <h3>Natpis 4</h3>
-            <p>Opis slike 4</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-krysten-merriman-20787_800x600.jpg" alt="Slika 5">
-            <h3>Natpis 5</h3>
-            <p>Opis slike 5</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-marko-blazevic-774731_800x600.jpg" alt="Slika 6">
-            <h3>Natpis 6</h3>
-            <p>Opis slike 6</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-pixabay-416160_800x600.jpg" alt="Slika 7">
-            <h3>Natpis 7</h3>
-            <p>Opis slike 7</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-pixabay-57416_800x600.jpg" alt="Slika 8">
-            <h3>Natpis 8</h3>
-            <p>Opis slike 8</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
         <div class="gallery-item">
-            <img src="images/pexels-tan-danh-866496_800x600.jpg" alt="Slika 9">
-            <h3>Natpis 9</h3>
-            <p>Opis slike 9</p>
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
+        </div>
+        <div class="gallery-item">
+            <img src="images/placeholder-image.png" alt="">
+            <h3>Image Title</h3>
         </div>
     </div>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem neque similique inventore nisi minus,
+        aliquam commodi alias laborum non quaerat ad consequatur quibusdam eligendi odit, sunt et illo iure, error
+        facere sed vitae labore! Aut quas odit sunt autem numquam, aliquid officiis necessitatibus modi eveniet sit
+        laboriosam dolore vero impedit et ea placeat laudantium ad, exercitationem repellat commodi sequi in,
+        architecto quia dicta. At quidem totam, facilis ut, reprehenderit numquam, aliquid optio quisquam quia
+        dolore cumque. Quas fugit est totam ut laboriosam laborum dolorem, qui mollitia quidem, suscipit molestias
+        aut ducimus quod, inventore nobis nostrum cumque! Doloribus necessitatibus id similique.</p>
 </body>
 
 </html>
