--- a/4-advanced-css/zadatak_03/index.html
+++ b/4-advanced-css/zadatak_03/index.html
@@ -2,63 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charseast="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <title>Responsive Grid Galerija</title>
 </head>
 
 <body>
-    <h1>Gallery Heading</h1>
-    <div class="gallery">
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
+    <div class="gallery-container">
+        <h1>Gallery Heading</h1>
+        <div class="gallery">
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
+            <div class="gallery-thumbnail">
+                <img src="images/placeholder-image.png" alt="">
+                <p>Image Title</p>
+            </div>
         </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="images/placeholder-image.png" alt="">
-            <h3>Image Title</h3>
-        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quisquam perferendis repellendus recusandae
+            sapiente expedita, maiores officiis placeat quis in earum nostrum sequi accusantium. Harum, pariatur ab?
+            Commodi
+            non reiciendis laborum rem labore corporis tempore? Labore dicta, quod quaerat alias nesciunt vel, facilis
+            maiores ducimus soluta voluptates quam quis odio consequuntur ipsam necessitatibus amet unde. Soluta
+            repudiandae
+            repellat voluptatem ipsam, assumenda esse fugit voluptate quia laudantium, dolorem reiciendis incidunt
+            distinctio nemo reprehenderit odio, modi rem est labore libero minima et veritatis quisquam eos. Velit,
+            aliquam.
+            Eveniet nobis magni atque ipsam modi assumenda animi fuga excepturi saepe. Sequi officiis magni velit!</p>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem neque similique inventore nisi minus,
-        aliquam commodi alias laborum non quaerat ad consequatur quibusdam eligendi odit, sunt et illo iure, error
-        facere sed vitae labore! Aut quas odit sunt autem numquam, aliquid officiis necessitatibus modi eveniet sit
-        laboriosam dolore vero impedit et ea placeat laudantium ad, exercitationem repellat commodi sequi in,
-        architecto quia dicta. At quidem totam, facilis ut, reprehenderit numquam, aliquid optio quisquam quia
-        dolore cumque. Quas fugit est totam ut laboriosam laborum dolorem, qui mollitia quidem, suscipit molestias
-        aut ducimus quod, inventore nobis nostrum cumque! Doloribus necessitatibus id similique.</p>
 </body>
 
 </html>
