--- a/4-advanced-css/zadatak_03/index.html
+++ b/4-advanced-css/zadatak_03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charseast="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <title>Responsive Grid Galerija</title>
