--- a/5-website-building/04_bootstrap_text_images/index.html
+++ b/5-website-building/04_bootstrap_text_images/index.html
@@ -3,9 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Bootstrap Text Images</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
+  <img class="img-fluid d-block ml-auto" src="img/img1.png" alt="this is img">
+
+  <img class="img-fluid d-block mx-auto" src="img/img1.png" alt="this is img">
+
+  <div class="text-right">
+    <img class="img-fluid" src="img/img1.png" alt="this is img">
+  </div>
+
+  <div class="text-center">
+    <img class="img-fluid" src="img/img1.png" alt="this is img">
+  </div>
+
+  <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta fugit earum natus repudiandae quis distinctio fuga culpa mollitia animi qui! Eos blanditiis quod, doloribus omnis fugiat asperiores accusamus nemo numquam?</p>
   
+  <p class="text-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta fugit earum natus repudiandae quis distinctio fuga culpa mollitia animi qui! Eos blanditiis quod, doloribus omnis fugiat asperiores accusamus nemo numquam?</p>
+
+  <p class="text-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta fugit earum natus repudiandae quis distinctio fuga culpa mollitia animi qui! Eos blanditiis quod, doloribus omnis fugiat asperiores accusamus nemo numquam?</p>
+
+  <img class="img-fluid" src="img/img1.png" alt="this is image">
+  <img class="img-fluid rounded " src="img/img1.png" alt="this is image">
+  <img class="img-fluid rounded circle" src="img/img1.png" alt="this is image">
+  <img class="img-fluid img-thumbnail" src="img/img1.png" alt="this is image">
+
+  <blockquote class="blockquote">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iusto cupiditate quisquam laborum natus alias earum veniam vero deleniti rem non sint accusantium, tempora autem quas obcaecati qui at vitae.</p>
+    <footer class="blockquote-footer">Taken from: <cite>Lorem ipsum</cite></footer>
+  </blockquote>
+
+  <p>This is regular paragraph text. <mark>This text is highlighted.</mark></p>
+  <p><del>This is deleted text.</del></p>
+  <p><s>This is no longer accurate.</s></p>
+  <p><ins>This text is an addition to the document.</ins></p>
+  <p><u>This is underlined text.</u></p>
+  <p>This is regular paragraph <small>This text is smaller.</small></p>
+  <p>This is regular paragraph <strong>This text is emphasized using bold.</strong></p>
+  <p>This is regular paragraph text. <em>This is italicized text. </em></p>
+
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis iure, sapiente neque velit mollitia sunt pariatur molestias ad eaque ut fugiat facilis placeat reprehenderit dicta? Exercitationem possimus vero enim officiis.</p>
+  <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis iure, sapiente neque velit mollitia sunt pariatur molestias ad eaque ut fugiat facilis placeat reprehenderit dicta? Exercitationem possimus vero enim officiis.</p>
+
+  <h1 class="display-1">Display 1</h1>
+  <h1 class="display-2">Display 2</h1>
+  <h1 class="display-3">Display 3</h1>
+  <h1 class="display-4">Display 4</h1>
+
+  <h1>This is heaading
+    <small>Heading secondary text</small>
+    <small class="text-muted">Heading secondary text</small>
+  </h1>
+
+  <h1>h1. Heading - 2.5rem</h1>
+  <p class="h1">This is like heading text</p>
+
+  <script src="js/jquery-3.7.1.slim.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
