--- a/5-website-building/04_bootstrap_text_images copy/index.html
+++ b/5-website-building/04_bootstrap_text_images copy/index.html
@@ -11,36 +11,36 @@
 <body>
   <h2 class="bg-warning display-1">Tabela</h2>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-        <th>Heading</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Cell 1 content</td>
-        <td>Cell 2 content</td>
-        <td>Cell 3 content</td>
-        <td>Cell 4 content</td>
-        <td>Cell 5 content</td>
-        <td>Cell 6 content</td>
-        <td>Cell 7 content</td>
-        <td>Cell 8 content</td>
-        <td>Cell 9 content</td>
-      </tr>
-    </tbody>
-  </table>
-
-
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+          <th>Heading</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Cell 1 content</td>
+          <td>Cell 2 content</td>
+          <td>Cell 3 content</td>
+          <td>Cell 4 content</td>
+          <td>Cell 5 content</td>
+          <td>Cell 6 content</td>
+          <td>Cell 7 content</td>
+          <td>Cell 8 content</td>
+          <td>Cell 9 content</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <h2>Tabela 1</h2>
   <table class="table">
