bootstrap_forms_&_buttons

--- a/5-website-building/05_bootstrap_lists_&_tables/index.html
+++ b/5-website-building/05_bootstrap_lists_&_tables/index.html
@@ -5,143 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>lists_&_tables</title>
+  <title>bootstrap_forms_&_buttons</title>
 </head>
 
 <body>
-  <h2 class="bg-warning display-1">Tabela</h2>
-
-  <div class="table-responsive">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-          <th>Heading</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Cell 1 content</td>
-          <td>Cell 2 content</td>
-          <td>Cell 3 content</td>
-          <td>Cell 4 content</td>
-          <td>Cell 5 content</td>
-          <td>Cell 6 content</td>
-          <td>Cell 7 content</td>
-          <td>Cell 8 content</td>
-          <td>Cell 9 content</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <h2>Tabela 1</h2>
-  <table class="table">
-    <tr class="table-active">
-      <td>.table-active</td>
-    </tr>
-    <tr class="table-primary">
-      <td>.table-primary</td>
-    </tr>
-    <tr class="table-secondary">
-      <td>.table-secondary</td>
-    </tr>
-    <tr class="table-success">
-      <td>.table-success</td>
-    </tr>
-    <tr class="table-danger">
-      <td>.table-danger</td>
-    </tr>
-    <tr class="table-warning">
-      <td>.table-warning</td>
-    </tr>
-    <tr class="table-info">
-      <td>.table-info</td>
-    </tr>
-    <tr class="table-light">
-      <td>.table-light</td>
-    </tr>
-    <tr class="table-dark">
-      <td>.table-dark</td>
-    </tr>
-  </table>
-
-  <h2>Tabela 2</h2>
-  <!-- <table class="table table-striped table-bordered table-hover table-dark table-borderless table-sm"> -->
-  <!-- <table class="table table-hover table-dark table-sm"> -->
-  <table class="table ">
-    <thead class="table-light">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Character</th>
-        <th scope="col">Movie</th>
-        <th scope="col">Year</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td class="text-primary">Trelovkovsky</td>
-        <td class="text-secondary">Le locataire</td>
-        <td class="text-transparent">1976</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Rosemary Woodhouse</td>
-        <td>Rosemary's Baby</td>
-        <td>1968</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Paulina Escobar</td>
-        <td>Death and the Maiden</td>
-        <td>1994</td>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-        <td>David Kentley</td>
-        <td>Rope</td>
-        <td>1948</td>
-      </tr>
-      <tr>
-        <th scope="row">5</th>
-        <td>Margot Wendice</td>
-        <td>Dial M for Murder</td>
-        <td>1954</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="bg-success">
-    <ul class="list-inline">
-      <li class="list-inline-item">nigredo</li>
-      <li class="list-inline-item">albedo</li>
-      <li class="list-inline-item">citrinitas</li>
-      <li class="list-inline-item">rubedo</li>
-    </ul>
-  </div>
-
-  <div class="bg-info">
-    <ul class="list-unstyled">
-      <li>nigredo
-        <ul class="list-unstyled">
-          <li>primo</li>
-          <li>secundo</li>
-        </ul>
-      </li>
-      <li>albedo</li>
-      <li>citrinitas</li>
-      <li>rubedo</li>
-    </ul>
-  </div>
-
+  
   <script src="js/jquery-3.7.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
