--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -19,6 +19,7 @@
         </div>
       </div>
     </div>
+    <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="see more"></a>
   </section>
   
   <script src="js/jquery-3.4.1.slim.min.js"></script>
