--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,23 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <header class="p-3">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4">
+          <img id="header-logo" src="img/header-logo.png" alt="coffe shop header logo">
+        </div>
+        <div class="col-8 text-right">
+          <a class="text-decoration-none text-uppercase" href="#">about</a>
+          <a class="text-decoration-none text-uppercase" href="#">products</a>
+          <a class="text-decoration-none text-uppercase" href="#">contact</a>
+          <a class="text-decoration-none text-uppercase" href="#">how to find us?</a>
+        </div>
+      </div>
+    </div>
+  </header>
 
   <section id="hero-section" class="text-light">
     <div class="container-fluid">
@@ -15,14 +32,18 @@
         <div class="col-12 text-center">
           <img id="hero-logo" src="img/logo.png" alt="coffee shop logo">
           <h1 class="display-2 font-weight-bold">THE HOME OF COFFEE</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic numquam in repudiandae adipisci nemo ratione, ab aliquam suscipit nihil vitae?</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic numquam in repudiandae adipisci
+            nemo ratione, ab aliquam suscipit nihil vitae?</p>
         </div>
       </div>
     </div>
-    <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="see more"></a>
+    <a id="arrow-down" href="#intro-section">
+      <img src="img/arrow-down.png" alt="see more">
+    </a>
   </section>
-  
-  <script src="js/jquery-3.4.1.slim.min.js"></script>
+
+  <script src="js/jquery-3.7.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
