--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -7,6 +7,7 @@
   <title>Coffee Shop Website Example</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <div class="col-4">
           <img id="header-logo" src="img/header-logo.png" alt="coffe shop header logo">
         </div>
-        <div class="col-8 text-right">
+        <div class="col-8 text-end">
           <a class="text-decoration-none text-uppercase" href="#">about</a>
           <a class="text-decoration-none text-uppercase" href="#">products</a>
           <a class="text-decoration-none text-uppercase" href="#">contact</a>
@@ -40,6 +41,80 @@
     <a id="arrow-down" href="#intro-section">
       <img src="img/arrow-down.png" alt="see more">
     </a>
+  </section>
+
+  <section id="intro-section" class="py-5">
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-6 text-center py-5">
+          <h1>THE BEST COFFEE SHOP</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti assumenda similique reiciendis
+            exercitationem eveniet expedita culpa, cum tempora cupiditate iste. Nostrum necessitatibus fugiat veniam
+            laboriosam magnam eligendi illo rem earum!</p>
+        </div>
+      </div>
+      <div class="row py-5">
+        <div class="col-4 text-center">
+          <img class="img-fluid py-3" src="img/icon-1.png" alt="icon 1">
+          <p class="h4">BEST BEANS</p>
+        </div>
+        <div class="col-4 text-center">
+          <img class="img-fluid py-3" src="img/icon-2.png" alt="icon 2">
+          <p class="h4">QUALITY MILK</p>
+        </div>
+        <div class="col-4 text-center">
+          <img class="img-fluid py-3" src="img/icon-3.png" alt="icon 3">
+          <p class="h4">PERFECT BLEND</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="about-section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-5 offset-1 align-self-center">
+          <h2>GREAT PLACE</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, obcaecati dolorum sit itaque placeat
+            repudiandae in voluptatibus neque debitis perferendis dolore accusamus commodi perspiciatis quisquam. Totam
+            architecto amet sit obcaecati!</p>
+          <button class="btn btn-primary">FIND OUT MORE</button>
+        </div>
+        <div class="col-5 offset-1" id="about-bg-1">
+
+        </div>
+      </div>
+      <div class="row align-items-center" id="about-bg-2 ">
+        <div class="col-6">
+
+        </div>
+        <div class="col-6 text-light">
+          <h2>FRESH BEANS</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, obcaecati dolorum sit itaque placeat
+            repudiandae in voluptatibus neque debitis perferendis dolore accusamus commodi perspiciatis quisquam. Totam
+            architecto amet sit obcaecati!</p>
+          <button class="btn btn-primary">FIND OUT MORE</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="menu-section">
+    <div class="container">
+      <div class="row">
+        <h1>SELECTION FROM OUR MENU</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti alias possimus debitis vel, totam vitae architecto cumque voluptatum vero quidem atque blanditiis eligendi accusamus illo velit, ad ipsa corporis sapiente.</p>
+      </div>
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+      </div>
+    </div>
   </section>
 
   <script src="js/jquery-3.7.1.slim.min.js"></script>
