--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -102,17 +102,50 @@
   <section id="menu-section">
     <div class="container">
       <div class="row">
-        <h1>SELECTION FROM OUR MENU</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti alias possimus debitis vel, totam vitae architecto cumque voluptatum vero quidem atque blanditiis eligendi accusamus illo velit, ad ipsa corporis sapiente.</p>
+        <div class="col-12 text-center py-5">
+          <h1>SELECTION FROM OUR MENU</h1>
+          <p class="text-muted lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti alias possimus
+            debitis vel, totam vitae architecto cumque voluptatum vero quidem atque blanditiis eligendi accusamus illo
+            velit, ad ipsa corporis sapiente.</p>
+        </div>
       </div>
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-1.png" alt="coffee item 1">
+          <h2>BLACK CAKE</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">4€</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-2.png" alt="coffee item 2">
+          <h2>BLACK COFFEE</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">6€</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-3.png" alt="coffee item 3">
+          <h2>ESPRESSO</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">6€</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-4.png" alt="coffee item 4">
+          <h2>LATTE</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">6€</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-5.png" alt="coffee item 5">
+          <h2>MACARONS</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">3€</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="img/coffee-item-6.png" alt="coffee item 6">
+          <h2>MACCHIATO</h2>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="h3">5€</p>
+        </div>
       </div>
     </div>
   </section>
