--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -110,41 +110,41 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-1.png" alt="coffee item 1">
-          <h2>BLACK CAKE</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-1.png" alt="coffee item 1">
+          <h2 class="my-3">BLACK CAKE</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">4€</p>
         </div>
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-2.png" alt="coffee item 2">
-          <h2>BLACK COFFEE</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-2.png" alt="coffee item 2">
+          <h2 class="my-3">BLACK COFFE</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-3.png" alt="coffee item 3">
-          <h2>ESPRESSO</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-3.png" alt="coffee item 3">
+          <h2 class="my-3">ESPRESSO</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-4.png" alt="coffee item 4">
-          <h2>LATTE</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-4.png" alt="coffee item 4">
+          <h2 class="my-3">LATTE</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-5.png" alt="coffee item 5">
-          <h2>MACARONS</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-5.png" alt="coffee item 5">
+          <h2 class="my-3">MACARONS</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">3€</p>
         </div>
-        <div class="col-4 text-center">
-          <img src="img/coffee-item-6.png" alt="coffee item 6">
-          <h2>MACCHIATO</h2>
+        <div class="col-sm-6 col-md-4 p-5 text-center">
+          <img class="img-fluid" src="img/coffee-item-6.png" alt="coffee item 6">
+          <h2 class="my-3">MACCHIATO</h2>
           <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
-          <p class="h3">5€</p>
+          <p class="h3">6€</p>
         </div>
       </div>
     </div>
